WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97789
[chromium] Page overlays are not updated when WebView is resized
https://bugs.webkit.org/show_bug.cgi?id=97789
Summary
[chromium] Page overlays are not updated when WebView is resized
Andrey Kosyakov
Reported
2012-09-27 08:05:40 PDT
0. Navigate to
http://www.webkit.org
1. Open Web Inspector. 2. Go to Settings -> Overrides, override user agent to anything phone-like. 3. Observe that the page is reduced in size and we display grayish overlay on the unused part of the view. 4. Increase the size of the browser window. EXPECTED: The gray area fills entire area outside of the page. ACTUAL: There's some white space between the overlay and the window border. This was regressed by
r129511
. Note that we also have a similar problem with paused-on-breakpoint overlay, which is unrelated (was regressed some time ago, likely at
r126857
)
Attachments
Patch
(1.29 KB, patch)
2012-09-27 08:07 PDT
,
Andrey Kosyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2012-09-27 08:07:10 PDT
Created
attachment 166002
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-27 10:01:45 PDT
Comment on
attachment 166002
[details]
Patch Clearing flags on attachment: 166002 Committed
r129772
: <
http://trac.webkit.org/changeset/129772
>
WebKit Review Bot
Comment 3
2012-09-27 10:01:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug