Page overlays are not updated when WebView is resized https://bugs.webkit.org/show_bug.cgi?id=97789

Reviewed by Vsevolod Vlasov.

Invalidate page overlays when view is resized.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::sendResizeEventAndRepaint):


Canonical link: https://commits.webkit.org/115783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129772 268f45cc-cd09-0410-ab3c-d52691b4dbfc